Gray-Space/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>GS_Colour__c</fullName>
        <label>Colour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Gray</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Depth__c</fullName>
        <inlineHelpText>Depth in cm.</inlineHelpText>
        <label>Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GS_Height__c</fullName>
        <inlineHelpText>Height in cm</inlineHelpText>
        <label>Height</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_Name_Link__c</fullName>
        <formula>&apos;/&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Promoted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GS_Space_Type__c</fullName>
        <label>Space Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GS_Space_Type_PickList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GS_Width__c</fullName>
        <description>Width in cm.</description>
        <inlineHelpText>Width in cm.</inlineHelpText>
        <label>Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>defaultPhotoId__c</fullName>
        <label>defaultPhotoId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>